# NeuralLens

./: .gitignore  README.md  TRIBE (5).ipynb  package-lock.json  pyproject.toml
.claude/: settings.json
examples/: deepgaze_dummy_demo.py
fetchai_integrations/: README.md  register_agent.py  requirements.txt  run_all.sh  run_all_agents.py  setup.sh
fetchai_integrations/agents/: __init__.py  executor_agent.py  interpreter_agent.py  models.py  orchestrator.py  sensor_agent.py  strategist_agent.py
fetchai_integrations/agentverse/: executor_agent.py  get_addresses.py  interpreter_agent.py  orchestrator.py  payment_agent.py  sensor_agent.py  strategist_agent.py
fetchai_integrations/docs/: nes_formula.md  prompts.md
fetchai_integrations/integrations/: __init__.py  cloudinary_client.py  image_fetcher.py  neurallens_agent.py
fetchai_integrations/pipeline/: __init__.py  gemma_optimizer.py  nes_math.py  nes_scorer.py  optimization_loop.py  roi_extractor.py  scraper.py  tribe_inference.py
fetchai_integrations/tests/: debug_agent_comms.py  debug_pipeline.py  test_addresses.py  test_agent.py  test_cloudinary.py  test_gemma.py  test_nes.py  test_nes_math.py  test_scraper.py  test_tribe.py  test_tribe_api.py
fetchai_integrations/ui/: __init__.py  app.py
neurallens/: .env.example  README.md
neurallens/backend/: agent.py  brain_regions.py  gaze_predictor.py  main.py  memory.py  nes.py  neurallens_memory.db  optimizer.py  pattern_learner.py  requirements.txt  scorer.py  scraper.py  (+3 more)
tests/: test_ethics.py  test_loop.py  test_reward.py  test_rois.py  test_tribe_remote.py
(+23 files in other folders)
